# m-accounting

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
app/: __init__.py  api.py  dash_app.py  main.py  models.py  server.py  storage.py
app/convert/: pdf_to_json.py
notebooks/: we_move.py
schema/: accounts_schema.json  users_schema.json
tests/: test_api.py  test_convert.py  test_storage.py
