[project]
name = "m-accounting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "docling>=2.52.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "mypy>=1.18.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "ruff>=0.13.0",
    "uvicorn[standard]>=0.30.0",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20240907",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["."]
exclude = [
    ".venv/",
    "build/",
    "dist/",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PL",  # Pylint-inspired rules
    "PERF" # Perflint
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_optional = true
exclude = '^(\.venv/|build/|dist/)'

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true
