[project]
name = "m-accounting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash==3.3.0",
    "docling==2.63.0",
    "fastapi==0.122.0",
    "ipykernel==7.1.0",
    "mypy==1.18.2",
    "pandas==2.3.3",
    "pydantic==2.12.5",
    "pytest==9.0.1",
    "python-dotenv==1.2.1",
    "rich==14.2.0",
    "ruff==0.14.6",
    "uvicorn[standard]==0.38.0",
    "requests==2.32.5",
    "types-requests==2.32.4.20250913",
    "schwifty>=2025.9.0",
    "dash-mantine-components>=2.4.0",
    "pre-commit>=4.5.0",
    "pandas-stubs>=2.3.2",
    "plotly-stubs>=0.0.6",
]

[tool.ruff]
target-version = "py314"
src = ["."]
line-length = 120
exclude = [
    ".venv/",
    "build/",
    "dist/",
    ".mypy_cache/",
    ".pytest_cache/",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PL",  # Pylint-inspired rules
    "PERF" # Perflint
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_optional = true
exclude = '^(\.venv/|build/|dist/)'

[[tool.mypy.overrides]]
module = [
    "dash_mantine_components",
    "dash_mantine_components.*",
    "notebooks.*",
]
ignore_missing_imports = true
ignore_errors = true

# TODO: Fix type errors in app/ and remove this override
[[tool.mypy.overrides]]
module = "app.*"
ignore_errors = true

# TODO: Fix type errors in app/ and remove this override
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true


[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true
